feat: adding editChore method

--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -22,3 +22,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+}
