--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -10,7 +10,10 @@ repositories {
 }
 
 dependencies {
+
     implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'com.github.lbovolini:object-mapper:1.1.68'
+    implementation 'com.konghq:unirest-objectmapper-jackson:4.0.0-RC7'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
@@ -18,6 +21,9 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.0.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.0.1'
 }
 
 test {
