--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:5.6.0'
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.0.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.0.1'
