feat: update chore repository

--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -15,21 +15,13 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j:8.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-<<<<<<< HEAD
-    // https://mvnrepository.com/artifact/org.mockito/mockito-core
     testImplementation 'org.mockito:mockito-core:5.6.0'
-
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3'
-
-=======
-    testImplementation 'org.mockito:mockito-core:5.6.0'
->>>>>>> 8a145508ae9bb84231ccde42183ffa2aff2410b9
+    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
 
 test {
